--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
