--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
